@@ -1,3 +1,9 @@
+[B]Version 1.7.32[/B]
+
+- Updated: hardsextube
+- Fixed: url parsing
+
+
 [B]Version 1.7.31[/B]
 
 - Updated: youporn
